codex-rs/tui/src/bottom_pane/async_questions/snapshots/codex_tui__bottom_pane__async_questions__tests__question_remapped_choice_footer.snap
---
source: tui/src/bottom_pane/async_questions/state_tests.rs
expression: buffer_text(&buffer)
---

  2 of 2
  Second

  › 1. Option 1 is long enough to wrap across
       rows
    2. Option 2 is long enough to wrap across
       rows

  f9 submit   ctrl + ] skip   option 1/13
  ⌥ + ↓ / shift + → prev question
