codex-rs/tui/src/bottom_pane/async_questions/snapshots/codex_tui__bottom_pane__async_questions__tests__question_wrapped_selected_option.snap
---
source: tui/src/bottom_pane/async_questions/state_tests.rs
expression: buffer_text(&clipped)
---

  Second

  › 2. A suggested answer that is
       long enough to wrap across

  enter submit   ctrl + ] skip
  option 2/3
  ⌥ + ↓ / shift + → main prompt
